--- a/source/package.json
+++ b/source/package.json
@@ -41,6 +41,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mvdcorput/cs-npm.git"   
+    "url": "https://github.com/mvdcorput/cs-ngx.git"   
   }
 }
