--- a/source/package.json
+++ b/source/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:cs-ngx": "npm build cs-ngx",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -26,12 +27,22 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular-devkit/build-ng-packagr": "~0.11.0",
     "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.2.9",
     "@angular/language-service": "~7.1.0",
     "@types/node": "~8.9.4",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^4.2.0",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
@@ -41,6 +52,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mvdcorput/cs-ngx.git"   
+    "url": "https://github.com/mvdcorput/cs-ngx.git"
   }
 }
