--- a/source/projects/cs-ngx-npm/package.json
+++ b/source/projects/cs-ngx-npm/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@cosoft/ngx",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Ngx library for handy stuff",
   "author": "Martijn van der Corput",
   "keywords": [
     "angular",
     "ngx",
     "directive",
+    "jwt",
+    "helper",
     "ripple",
     "interceptor",
     "json date",
@@ -21,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mvdcorput/cs-ngx.git"   
+    "url": "https://github.com/mvdcorput/cs-ngx.git"
   },
   "homepage": "https://www.linkedin.com/in/mvdcorput/"
 }
